Alterado por Amanda: cabeçalho, cores, logo, icones. Mudanças no conteúdo e textos.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class=container>
             <div class="menu-logo">
-                <h1 class="logo"> <a href="index.html" title="Decolar"> <img class="logo" src="img/logocompleta-decolar.png" alt="Logo Decolar"> </a> </h1>
+                <h1 class="logo"> <a href="index.html" title="DreamScape"> <img class="logo" src="img/logo.dreamScape.png" alt="Logo Decolar"> </a> </h1>
 
                 <nav class="menu-principal">
                     <ul>
@@ -31,7 +31,7 @@
                 </nav>
 
                 <nav class="menu2">
-                    <ul>
+                    <ul>                        
                         <li> <a href="#"> <img src="/img/icon-perfil.png" alt="icon-perfil"> <h3>Iniciar Sessão</h3> </a> </li>
                         <li> <a href="#"> <img src="img/icon-mala.png" alt="icon-mala"> <h3>Minhas Viagens</h3> </a> </li>
                         <li> <a href="#"> <img src="img/icon-ajuda.png" alt="icon-ajuda"> <h3>Ajuda</h3> </a> </li>
@@ -49,19 +49,19 @@
                         <h2 id="psgs-aereas">Passagens aéreas</h2>
                         <form action="" method="POST">
                             
-                            <label><span>Origem</span>
+                            <label><span>Qual a sua origem? </span>
                                 <input type="text" name="origem" required>
                             </label>
-                            <label><span>Destino</span>
+                            <label><span>Qual o seu destino?</span>
                                 <input type="text" name="destino" required>
                             </label>
-                            <label><span>Data de ida</span>
+                            <label><span>Quando deseja ir?</span>
                                 <input type="date" name="ida" required>
                             </label>
-                            <label> <span>Data de volta</span>
+                            <label> <span>Quando volta?</span>
                                 <input type="date" name="volta" required>
                             </label>
-                            <label><span>Classe</span>
+                            <label><span>Selecione uma classe</span>
                                 <select name="classes">
                                     <option></option>
                                     <option value="economica">Econômica</option>
