--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo-decolar-icone.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/estilo.css">
-    <title>Decolar</title>
+    <link rel="stylesheet" href="css/estilo.css">
+    <title>DreamScape</title>
 </head>
 <body>
 
