--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <nav class="menu2">
                     <ul>                        
-                        <li> <a href="#"> <img src="/img/icon-perfil.png" alt="icon-perfil"> <h3>Iniciar Sessão</h3> </a> </li>
+                        <li> <a href="cadastrar.html"> <img src="/img/icon-perfil.png" alt="icon-perfil"> <h3>Iniciar Sessão</h3> </a> </li>
                         <li> <a href="#"> <img src="img/icon-mala.png" alt="icon-mala"> <h3>Minhas Viagens</h3> </a> </li>
                         <li> <a href="#"> <img src="img/icon-ajuda.png" alt="icon-ajuda"> <h3>Ajuda</h3> </a> </li>
                     </ul>
