--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </article>
                     <article class="item">
                         <h3>Documentação necesssária para comprar e viajar</h3>
-                        <p>Para comprar a sua viagem na Decolar, você deve ter os números dos documentos de identidade, os nomes, os sobrenomes e as datas de nascimento dos passageiros. Antes de viajar, revise o detalhe da sua reserva em Minha Conta e saiba quais são os vistos e vacinas obrigatórios no país de destino. Isso inclui as escalas nas viagens de avião e os tours que você realizar durante a sua viagem. Se uma criança precisar viajar sozinha ou acompanhada, deverá contar com uma autorização especial para sair do país.</p>
+                        <p>Para comprar sua viagem na Decolar, tenha em mãos os números dos documentos de identidade, nomes, sobrenomes e datas de nascimento dos passageiros. Antes de viajar, revise sua reserva em Minha Conta e verifique os vistos e vacinas necessários no país de destino, incluindo escalas e passeios. Para viagens de crianças desacompanhadas, é necessário obter uma autorização especial para sair do país.</p>
                     </article>
                     <article class="item">
                         <h3>É possível alterar ou cancelar uma compra?</h3>
