alterações no cadastro e no index

--- a/cadastrar.html
+++ b/cadastrar.html
@@ -36,25 +36,27 @@
             </div>
         </div>
     </header>
-    <div class="campo">
-        <h1>Cadastrar</h1>
-        <form action="#" method="POST">
-            <input type="text" placeholder="Nome de usuário">
-            <input type="text" placeholder="Nome">
-            <input type="password" placeholder="Senha">
-            <input type="password" placeholder="Digite a senha novamente">
-        </form>
+    <main>
+        <div class="campo">
+            <h1>Cadastrar</h1>
+            <form action="#" method="POST">
+                <input type="text" placeholder="Nome de usuário">
+                <input type="text" placeholder="Nome">
+                <input type="password" placeholder="Senha">
+                <input type="password" placeholder="Digite a senha novamente">
+            </form>
 
-        <div class="termos">
-            <input type="checkbox" id="checkbox">
-            <label for="checkbox">Eu concordo com os <a href="#">Termos e Condições.</a></label>
+            <div class="termos">
+                <input type="checkbox" id="checkbox">
+                <label for="checkbox">Eu concordo com os <a href="#">Termos e Condições.</a></label>
+            </div>
+            <button>Cadastrar</button>
+
+            <div class="membro">
+                Já é um membro? <a href="login.html">Faça Login</a>
+            </div>
+
         </div>
-        <button>Cadastrar</button>
-
-        <div class="membro">
-            Já é um membro? <a href="login.html">Faça Login</a>
-        </div>
-
-    </div>
+    </main>
 </body>
 </html>
