--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/logo-decolar-icone.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/estilo.css">
     <title>DreamScape</title>
 </head>
@@ -80,55 +79,58 @@
 
         <section id="topicos">
 
-            <div class="destino">
+            <div class="topic-itens">
                 <h2>Top destinos mais buscados hoje no Brasil</h2>
                 <img src="img/fortaleza.webp" alt="Fortaleza" class="menor">
+                <p>Garanta a melhor viagem da sua vida!</p>
                 <a href="#" class="botao-roxo">Ver mais</a>
             </div>
 
-            <div class="ofertas">
+            <div class="topic-itens">
                 <h2>Ofertas que não podem esperar</h2>
                 <img src="img/mulhernotebook.jpg" alt="Mulher no Notebook" width="400px">
-                <p>Se você ainda não definiu o seu destino, talvez te <br>interesse ver a nossa seção de ofertas.</p>
+                <p>Se você ainda não definiu o seu destino, talvez te <br>  interesse ver a nossa seção de ofertas.</p>
                 <a href="#" class="botao-roxo">Ver Ofertas</a>
             </div>
         </section>
 
+        
         <section class="informacoes">
-            <h2>Compre tudo para a sua viagem na Decolar</h2>
+            <h2>Compre tudo para a sua viagem na DreamScape</h2>
                 <div id="coluna">
                     <article class="item">
-                        <h3>Como comprar na Decolar?</h3>
-                        <p>Na Decolar você pode comprar tudo o que precisa para as suas férias. Primeiro, insira a informação da sua viagem no buscador. Compare entre centenas de opções e escolha a que melhor se adapta aos seus planos, clicando em Comprar. Cadastre os dados dos passageiros, selecione o meio de pagamento e insira demais informações necessárias. Aproveite as ofertas e promoções da Decolar! Por último, clique novamente em Comprar e receba os vouchers no seu e-mail para começar a desfrutar da sua viagem.</p>
+                        <h3>Como comprar na DreamScape?</h3>
+                        <p>Na DreamScape você pode comprar tudo o que precisa para as suas férias. Primeiro, insira a informação da sua viagem no buscador. Compare entre centenas de opções e escolha a que melhor se adapta aos seus planos, clicando em Comprar. Cadastre os dados dos passageiros, selecione o meio de pagamento e insira demais informações necessárias. Aproveite as ofertas e promoções da Decolar! Por último, clique novamente em Comprar e receba os vouchers no seu e-mail para começar a desfrutar da sua viagem.</p>
                     </article>
                     <article class="item">
                         <h3>Documentação necesssária para comprar e viajar</h3>
-                        <p>Para comprar sua viagem na Decolar, tenha em mãos os números dos documentos de identidade, nomes, sobrenomes e datas de nascimento dos passageiros. Antes de viajar, revise sua reserva em Minha Conta e verifique os vistos e vacinas necessários no país de destino, incluindo escalas e passeios. Para viagens de crianças desacompanhadas, é necessário obter uma autorização especial para sair do país.</p>
+                        <p>Para comprar sua viagem na DreamScape, tenha em mãos os números dos documentos de identidade, nomes, sobrenomes e datas de nascimento dos passageiros. Antes de viajar, revise sua reserva em Minha Conta e verifique os vistos e vacinas necessários no país de destino, incluindo escalas e passeios. Para viagens de crianças desacompanhadas, é necessário obter uma autorização especial para sair do país.</p>
                     </article>
                     <article class="item">
                         <h3>É possível alterar ou cancelar uma compra?</h3>
-                        <p>Na Decolar você pode fazer a alteração ou o cancelamento de uma reserva, mas leve em consideração que alguns provedores ou tarifas não permitem ou cobram um custo adicional para isso. Em voos, hotéis e carros, você só pode fazer alterações no mesmo provedor. Você também pode cancelar uma reserva para todos ou para alguns dos passageiros. O que você não pode fazer é alterar o titular da reserva. Lembre-se de revisar as políticas de alteração e cancelamento da sua reserva em Minha Conta.</p>
+                        <p>Na DreamScape você pode fazer a alteração ou o cancelamento de uma reserva, mas leve em consideração que alguns provedores ou tarifas não permitem ou cobram um custo adicional para isso. Em voos, hotéis e carros, você só pode fazer alterações no mesmo provedor. Você também pode cancelar uma reserva para todos ou para alguns dos passageiros. O que você não pode fazer é alterar o titular da reserva. Lembre-se de revisar as políticas de alteração e cancelamento da sua reserva em Minha Conta.</p>
                     </article>
                     <article class="item">
-                        <h3>Por que devo escolher a Decolar para a minha viagem?</h3>
-                        <p>A Decolar é uma das agências de viagens online com maior trajetória na América Latina e recomendada por milhares de viajantes. Aproveite as ofertas e promoções no nosso site e conheça o mundo todo. Compre sua viagem na Decolar através da web ou da app. Se você tem alguma dúvida ou quer mudar algo sobre a sua viagem, você pode fazê-lo em Minhas Viagens. Viaje com a confiança de que você pode contar conosco para o que precisar.</p>
+                        <h3>Por que devo escolher a DreamScape para a minha viagem?</h3>
+                        <p>A DreamScape é uma das agências de viagens online com maior trajetória na América Latina e recomendada por milhares de viajantes. Aproveite as ofertas e promoções no nosso site e conheça o mundo todo. Compre sua viagem na Decolar através da web ou da app. Se você tem alguma dúvida ou quer mudar algo sobre a sua viagem, você pode fazê-lo em Minhas Viagens. Viaje com a confiança de que você pode contar conosco para o que precisar.</p>
                     </article>
                 </div>
 
             <div id="atencaoperso">
                 <img src="img/icon-atendente.png" alt="icone-atendente" class="icon">
-                <h3>Meu Agente Decolar, compre com atenção personalizada!</h3>
+                <h3>Meu Agente DreamScape, compre com atenção personalizada!</h3>
                 <p>Temos vários canais de atendimento para você planejar a sua viagem com a ajuda dos nossos agentes.</p>
-                <a href="#" class="botao-roxo">Conhecer canais</a>
+                <a href="#" class="botao-roxo">Conhecer</a>
             </div>
         </section>
 
     </main>
     
     <footer id="rodape">
-        <h1 class="logo"> <a href="index.html" title="Decolar"> <img class="logo" src="img/logocompleta-decolar.png" alt="Logo Decolar"> </a> </h1>
+        <h1 class="logo"> <a href="index.html" title="DreamSpace"> <img class="logo" src="img/logo.dreamScape.png" alt="Logo DS"> </a> </h1>
 
-        <p>Todos Direitos Reservados. &copy Decolar 2023.</p>
+        <p>Todos Direitos Reservados. &copy DreamScape 2023. </p>
+
 
         <div class="redes-sociais">
             <a href="" title="Instagram"><img src="img/icon-instagram.png" class="icon"></a>
